--- a/style.css
+++ b/style.css
@@ -1,7 +1,74 @@
+/* RESET */
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Outfit', sans-serif;
+}
+
+/*FUNDO */
+.container {
+  width: 100vw;
+  height: 100vh;
+
+  background: hsl(212, 45%, 89%);
+
+  display: flex;
+  align-items: center;
+
+  flex-direction: column;
+  justify-content: center;
+}
+/* SECTION */
+section {
+  width: 18.7rem;
+  height: 31.25rem;
+  background: hsl(0, 0%, 100%);
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  border-radius: 1.2rem;
+  box-shadow: 0px 11px 16px 0px rgba(0, 0, 0, 0.75);
+}
+
+/* SECTION - IMG */
+
+section .image {
+  width: 16.8rem;
+  height: 16.8rem;
+  margin: 1rem 1rem 0 1rem;
+}
+section .image img {
+  width: 100%;
+  height: 100%;
+  border-radius: 0.4rem;
+}
+
+/* SECTION - TEXT */
+
+section .text {
+  margin-top: 1rem;
+
+  width: 15rem;
+  height: auto;
+
+  text-align: center;
+}
+section .text .title {
+  font-size: 14px;
+  color: hsl(218, 44%, 22%);
+  margin-bottom: 1rem;
+}
+section .text .subtitle {
+  color: hsl(220, 15%, 55%);
+}
+
 /* Atribuição */
 .attribution {
   font-size: 11px;
   text-align: center;
+  margin-top: 3rem;
 }
 .attribution a {
   color: hsl(228, 45%, 44%);
